--- a/test-output/old/TestAll/methods.html
+++ b/test-output/old/TestAll/methods.html
@@ -1,32 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestAll</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c7e463">  <td>18/11/26 17:21:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.LoginTest@4ef37659]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2125062626</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>18/11/26 17:21:04</td>   <td>4285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@4ef37659]">TC01</td> 
-  <td>main@2125062626</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>18/11/26 17:21:06</td>   <td>6362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@4ef37659]">TC02</td> 
-  <td>main@2125062626</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>18/11/26 17:21:07</td>   <td>6804</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@4ef37659]">TC03</td> 
-  <td>main@2125062626</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>18/11/26 17:21:07</td>   <td>7378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@4ef37659]">TC04</td> 
-  <td>main@2125062626</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>18/11/26 17:21:07</td>   <td>7581</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@4ef37659]">TC05</td> 
-  <td>main@2125062626</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>18/11/26 17:21:09</td>   <td>9508</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@4ef37659]">TC06</td> 
-  <td>main@2125062626</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>18/11/26 17:21:10</td>   <td>10580</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC08()[pri:0, instance:Railway.LoginTest@4ef37659]">TC08</td> 
-  <td>main@2125062626</td>   <td></td> </tr>
-<tr bgcolor="88bd7e">  <td>18/11/26 17:21:11</td>   <td>11016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC09()[pri:0, instance:Railway.LoginTest@4ef37659]">TC09</td> 
-  <td>main@2125062626</td>   <td></td> </tr>
-<tr bgcolor="c7e463">  <td>18/11/26 17:21:12</td>   <td>12070</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterClass()[pri:0, instance:Railway.LoginTest@4ef37659]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2125062626</td>   <td></td> </tr>
-<tr bgcolor="c7e463">  <td>18/11/26 17:21:13</td>   <td>12741</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.RegisterTest@34f7cfd9]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2125062626</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>18/11/26 17:21:16</td>   <td>16398</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.TC07()[pri:0, instance:Railway.RegisterTest@34f7cfd9]">TC07</td> 
-  <td>main@2125062626</td>   <td></td> </tr>
-<tr bgcolor="c78295">  <td>18/11/26 17:21:22</td>   <td>22302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.TC10()[pri:0, instance:Railway.RegisterTest@34f7cfd9]">TC10</td> 
-  <td>main@2125062626</td>   <td></td> </tr>
-<tr bgcolor="c7e463">  <td>18/11/26 17:21:23</td>   <td>22971</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterClass()[pri:0, instance:Railway.RegisterTest@34f7cfd9]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2125062626</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>18/11/27 08:22:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.LoginTest@776b83cc]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@620557167</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/27 08:22:37</td>   <td>5901</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@776b83cc]">TC01</td> 
+  <td>main@620557167</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/27 08:22:43</td>   <td>11174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@776b83cc]">TC02</td> 
+  <td>main@620557167</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/27 08:22:43</td>   <td>11557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@776b83cc]">TC03</td> 
+  <td>main@620557167</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/27 08:22:43</td>   <td>12003</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@776b83cc]">TC04</td> 
+  <td>main@620557167</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/27 08:22:44</td>   <td>12178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@776b83cc]">TC05</td> 
+  <td>main@620557167</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/27 08:22:45</td>   <td>13746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@776b83cc]">TC06</td> 
+  <td>main@620557167</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/27 08:22:46</td>   <td>14684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC08()[pri:0, instance:Railway.LoginTest@776b83cc]">TC08</td> 
+  <td>main@620557167</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/27 08:22:47</td>   <td>15144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC09()[pri:0, instance:Railway.LoginTest@776b83cc]">TC09</td> 
+  <td>main@620557167</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>18/11/27 08:22:48</td>   <td>16320</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterClass()[pri:0, instance:Railway.LoginTest@776b83cc]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@620557167</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>18/11/27 08:22:48</td>   <td>16987</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.RegisterTest@65f095f8]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@620557167</td>   <td></td> </tr>
+<tr bgcolor="959ece">  <td>18/11/27 08:22:52</td>   <td>20823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.TC07()[pri:0, instance:Railway.RegisterTest@65f095f8]">TC07</td> 
+  <td>main@620557167</td>   <td></td> </tr>
+<tr bgcolor="959ece">  <td>18/11/27 08:22:57</td>   <td>25960</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.TC10()[pri:0, instance:Railway.RegisterTest@65f095f8]">TC10</td> 
+  <td>main@620557167</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>18/11/27 08:22:58</td>   <td>26530</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterClass()[pri:0, instance:Railway.RegisterTest@65f095f8]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@620557167</td>   <td></td> </tr>
 </table>
