--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ceadd4">  <td>18/11/28 17:11:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.TC000()[pri:0, instance:Railway.RegisterTest@4f7da3a2]">TC000</td> 
-  <td>main@1239075987</td>   <td></td> </tr>
-<tr bgcolor="869769">  <td>18/11/28 17:11:26</td>   <td>10312</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterClass()[pri:0, instance:Railway.RegisterTest@4f7da3a2]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1239075987</td>   <td></td> </tr>
-<tr bgcolor="869769">  <td>18/11/28 17:11:11</td>   <td>-4174</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.RegisterTest@4f7da3a2]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1239075987</td>   <td></td> </tr>
+<tr bgcolor="9ca58e">  <td>18/11/29 02:32:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.TC000()[pri:0, instance:Railway.RegisterTest@130ad58d]">TC000</td> 
+  <td>main@2058930546</td>   <td></td> </tr>
+<tr bgcolor="9fedbd">  <td>18/11/29 02:32:06</td>   <td>-6320</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.RegisterTest@130ad58d]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2058930546</td>   <td></td> </tr>
 </table>
